--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ linked-hash-map = "0.5.6"
 once_cell = "1.18.0"
 oneshot = "0.1.6"
 parse_duration = "2.1.1"
+port-selector = "0.1.6"
 prettyplease = "0.2.15"
 prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
