--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -12,10 +12,19 @@ permissions:
   contents: read
 
 jobs:
-  test:
-    runs-on: arc-runner-set
+  test-small:
+    runs-on: gcp-small
     steps:
-    - name: Fail loudly, VI
+    - name: Fail loudly, VII
       run: |
-        >&2 echo WORKFLOW INTENTIONALLY FAILING (VI)
+        hostname
+        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (VII)'
+        exit 1
+  test-large:
+    runs-on: gcp-large
+    steps:
+    - name: Fail loudly, VII
+      run: |
+        hostname
+        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (VII)'
         exit 1
