--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -18,13 +18,5 @@ jobs:
     - name: Fail loudly, VII
       run: |
         hostname
-        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (VII)'
-        exit 1
-  test-large:
-    runs-on: gcp-large
-    steps:
-    - name: Fail loudly, VII
-      run: |
-        hostname
-        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (VII)'
+        >&2 echo 'WORKFLOW INTENTIONALLY FAILING (VII)'
         exit 1
