--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -15,16 +15,16 @@ jobs:
   test-small:
     runs-on: gcp-small
     steps:
-    - name: Fail loudly, VIII
+    - name: Fail loudly, IX
       run: |
         hostname
-        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (VIII)'
+        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (IX)'
         exit 1
   test-large:
     runs-on: gcp-large
     steps:
-    - name: Fail loudly, VIII
+    - name: Fail loudly, IX
       run: |
         hostname
-        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (VIII)'
+        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (IX)'
         exit 1
