--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -13,18 +13,18 @@ permissions:
 
 jobs:
   test-small:
-    runs-on: gcp-small
+    runs-on: arc-runner-set-small
     steps:
-    - name: Fail loudly, IX
+    - name: Fail loudly, X
       run: |
         hostname
-        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (IX)'
+        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (X)'
         exit 1
   test-large:
-    runs-on: gcp-large
+    runs-on: arc-runner-set-large
     steps:
-    - name: Fail loudly, IX
+    - name: Fail loudly, X
       run: |
         hostname
-        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (IX)'
+        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (X)'
         exit 1
