--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -15,16 +15,32 @@ jobs:
   test-small:
     runs-on: gcp-small
     steps:
-    - name: Fail loudly, XII
+    - name: Fail loudly, XIII
       run: |
         hostname
-        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (XII)'
+        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (XIII)'
         exit 1
   test-large:
     runs-on: gcp-large
     steps:
-    - name: Fail loudly, XII
+    - name: Fail loudly, XIII
       run: |
         hostname
-        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (XII)'
+        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (XIII)'
+        exit 1
+  test-weird-name-small:
+    runs-on: arc-runner-set-small
+    steps:
+    - name: Fail loudly, XIII
+      run: |
+        hostname
+        >&2 echo 'SMALL WORKFLOW INTENTIONALLY FAILING (XIII)'
+        exit 1
+  test-weird-name-large:
+    runs-on: arc-runner-set-large
+    steps:
+    - name: Fail loudly, XIII
+      run: |
+        hostname
+        >&2 echo 'LARGE WORKFLOW INTENTIONALLY FAILING (XIII)'
         exit 1
