--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -37,6 +37,7 @@ comfy-table = { workspace = true }
 current_platform = "0.2.0"
 dirs = { workspace = true }
 file-lock = "2.1.10"
+fs-err = { workspace = true }
 fungible = { workspace = true, optional = true }
 futures = { workspace = true }
 hex = { workspace = true }
