--- a/kubernetes/linera-validator/helmfile.yaml
+++ b/kubernetes/linera-validator/helmfile.yaml
@@ -3,11 +3,16 @@ repositories:
     url: https://scylla-operator-charts.storage.googleapis.com/stable
   - name: jetstack
     url: https://charts.jetstack.io
+  - name: prometheus-community
+    url: https://prometheus-community.github.io/helm-charts
+  - name: grafana
+    url: https://grafana.github.io/helm-charts
 
 releases:
   - name: linera-core
     namespace: default
     chart: .
+    timeout: 900
     needs:
       - scylla/scylla
     values:
@@ -21,35 +26,34 @@ releases:
         value: {{ env "LINERA_HELMFILE_SET_GENESIS_CONFIG" | default "working/genesis.json" }}
       - name: numShards
         value: {{ env "LINERA_HELMFILE_SET_NUM_SHARDS" | default 10 }}
-    timeout: 600
   - name: scylla
     namespace: scylla
     chart: scylla/scylla
+    timeout: 900
     needs:
       - scylla-manager/scylla-manager
       - scylla-operator/scylla-operator
     values:
       - {{ env "LINERA_HELMFILE_VALUES_SCYLLA" | default "scylla.values.yaml" }}
-    timeout: 600
   - name: scylla-manager
     namespace: scylla-manager
     chart: scylla/scylla-manager
+    timeout: 900
     needs:
       - scylla-operator/scylla-operator
-    timeout: 600
   - name: scylla-operator
     namespace: scylla-operator
     chart: scylla/scylla-operator
+    timeout: 900
     needs:
       - cert-manager/cert-manager
     values:
       - {{ env "LINERA_HELMFILE_VALUES_SCYLLA_OPERATOR" | default "scylla-operator.values.yaml" }}
-    timeout: 600
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
+    timeout: 900
     set:
       - name: installCRDs
         value: "true"
-    timeout: 600
 
