--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -29,6 +29,7 @@ async-trait = { workspace = true }
 bcs = { workspace = true }
 bytes = { workspace = true, optional = true }
 custom_debug_derive = { workspace = true }
+clap = { workspace = true }
 dashmap = { workspace = true }
 derive_more = { workspace = true }
 futures = { workspace = true }
