Move to Helmfile (#1412)
* Added scylla-operator chart and helmfiles

* Replaced Helm wrapper with Helmfile wrapper

* Added a step in CI to install Helmfile

* Create new temporary directory for every Helmfile deployment

* Increase installations timeouts

* Fix CI

* Make sure CI uses already built binaries

* Fix Helmfile installation

* Removed create_cert script

---------

Co-authored-by: Andre da Silva <andre.dasilva@linera.io>

--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -46,6 +46,8 @@ jobs:
           strip target/release/linera-proxy
           strip target/release/linera-server
           strip target/release/linera-db
+      - name: Setup helmfile
+        uses: mamezou-tech/setup-helmfile@v1.3.0
       - name: Run Wasm e2e test
         uses: nick-fields/retry@v2
         with:
