--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "linera-storage",
     "linera-views",
     "linera-views-derive",
+    "linera-shared-storage",
     "linera-witty",
     "linera-witty-macros",
     "linera-witty/test-modules",
