Another big bunch of write down.

--- a/linera-shared-storage/Cargo.toml
+++ b/linera-shared-storage/Cargo.toml
@@ -23,6 +23,7 @@ name = "shared_store_server"
 path = "src/shared_store_server.rs"
 
 [dependencies]
+async-lock = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 bincode = { workspace = true }
