Added profiling to proxy and server binaries

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -86,6 +86,8 @@ RUN mv \
     target/"$target"/release/linera-db \
     ./
 
+RUN strip linera linera-db
+
 # Stage 3.5 - Optionally copy binaries instead of using the build
 # images above
 FROM scratch as builder_copy
