--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,8 @@ proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
 proptest = "1.3.1"
 prost = "0.11"
+pyroscope = "0.5.7"
+pyroscope_pprofrs = "0.2"
 quote = "1.0"
 rand = "0.8.5"
 rand07 = { package = "rand", version = "0.7.3" }
