--- a/linera-shared-storage/Cargo.toml
+++ b/linera-shared-storage/Cargo.toml
@@ -38,6 +38,7 @@ tokio = { workspace = true }
 tokio-util = { workspace = true, features = ["codec", "net"] }
 tonic = { workspace = true }
 tonic-health = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
 proptest = { workspace = true }
