--- a/linera-shared-storage/Cargo.toml
+++ b/linera-shared-storage/Cargo.toml
@@ -10,13 +10,12 @@ documentation = "https://docs.rs/linera-shared-storage/latest/linera_shared_stor
 license = "Apache-2.0"
 edition = "2021"
 
-#[features]
-
 [features]
 default = ["rocksdb"]
 rocksdb = ["linera-views/rocksdb", "linera-service/rocksdb"]
 aws = ["linera-views/aws", "linera-service/aws"]
 scylladb = ["linera-views/scylladb", "linera-service/scylladb"]
+test = ["linera-views/test", "linera-service/test"]
 
 [[bin]]
 name = "shared_store_server"
