--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -22,6 +22,7 @@ db_timings = []
 metrics = ["dep:hex"]
 
 [dependencies]
+convert_case = { workspace = true }
 anyhow = { workspace = true }
 async-graphql = { workspace = true }
 async-lock = { workspace = true }
