Fix Prometheus metrics on Proxy

--- a/kubernetes/linera-validator/templates/proxy.yaml
+++ b/kubernetes/linera-validator/templates/proxy.yaml
@@ -12,6 +12,8 @@ spec:
     - port: {{ .Values.proxyPort }}
       name: linera-port
       targetPort: {{ .Values.proxyPort }}
+    - port: {{ .Values.metricsPort }}
+      name: metrics
   selector:
     app: proxy
   type: NodePort
