--- a/.github/workflows/dynamodb.yml
+++ b/.github/workflows/dynamodb.yml
@@ -33,16 +33,12 @@ permissions:
 jobs:
 
   test:
-    runs-on: ubuntu-latest-8-cores
-    timeout-minutes: 30
+    runs-on: gcp-large
+    timeout-minutes: 45
 
     steps:
     - uses: actions/checkout@v3
     - uses: Twey/setup-rust-toolchain@v1
-    - name: Install Protoc
-      uses: arduino/setup-protoc@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Build example applications
       run: |
         cd examples
