--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -27,6 +27,7 @@ async-graphql = { workspace = true }
 async-lock = { workspace = true }
 async-trait = { workspace = true }
 bcs = { workspace = true }
+convert_case = { workspace = true }
 futures = { workspace = true }
 generic-array = { workspace = true }
 hex = { workspace = true, optional = true }
