refactor runtime fees

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -603,6 +603,8 @@ ResourceControlPolicy:
         TYPENAME: Amount
     - read_operation:
         TYPENAME: Amount
+    - write_operation:
+        TYPENAME: Amount
     - byte_read:
         TYPENAME: Amount
     - byte_written:
