--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -597,22 +597,28 @@ Recipient:
           TYPENAME: Account
 ResourceControlPolicy:
   STRUCT:
-    - certificate:
+    - block:
         TYPENAME: Amount
-    - fuel:
+    - fuel_unit:
         TYPENAME: Amount
-    - storage_num_reads:
+    - read_operation:
         TYPENAME: Amount
-    - storage_bytes_read:
+    - byte_read:
         TYPENAME: Amount
-    - storage_bytes_written:
+    - byte_written:
         TYPENAME: Amount
-    - storage_bytes_stored:
+    - byte_stored:
+        TYPENAME: Amount
+    - operation:
+        TYPENAME: Amount
+    - operation_byte:
+        TYPENAME: Amount
+    - message:
+        TYPENAME: Amount
+    - message_byte:
         TYPENAME: Amount
     - maximum_bytes_read_per_block: U64
     - maximum_bytes_written_per_block: U64
-    - messages:
-        TYPENAME: Amount
 Round:
   ENUM:
     0:
