--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,10 +39,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    # - uses: Twey/setup-rust-toolchain@v1
-    #   with:
-    #     # We use `sccache`, so don't use `Swatinem/rust-cache` as well
-    #     cache: false
+      with:
+        fetch-depth: 0
     - name: Enable `sccache` for Rust builds
       run: |
         echo $PATH
@@ -51,8 +49,9 @@ jobs:
         ls -lah ~/.cache ||:
         ls -lah ~/.cache/cargo ||:
 
-        # cargo install sccache
         echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
+        env
+        sccache --show-stats
     - name: Build example applications
       run: |
         cd examples
