--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Run the benchmark test
       run: |
         cargo build --locked -p linera-service --bin linera-benchmark --features benchmark
-        cargo test --locked -p linera-service --features benchmark test_end_to_end_fungible_benchmark
+        cargo test --locked -p linera-service --features benchmark benchmark
     - name: Build Wasm test runner
       # use debug mode to avoid building wasmtime in release mode
       run: |
