--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,16 +41,9 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - name: Enable `sccache` for Rust builds
-      run: |
-        echo $PATH
-        type -P sccache ||:
-        ls -lah ~/.cargo ||:
-        ls -lah ~/.cache ||:
-        ls -lah ~/.cache/cargo ||:
-
-        echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
-        env
+      # - name: Enable `sccache` for Rust builds
+      #   run: echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
     - name: Build example applications
       run: |
         cd examples
