--- a/kubernetes/linera-validator/values-local.yaml
+++ b/kubernetes/linera-validator/values-local.yaml
@@ -16,6 +16,9 @@ loki-stack:
     persistence:
       enabled: true
       size: 1Gi
+    config:
+      limits_config:
+        reject_old_samples_max_age: 24h
   promtail:
     enabled: true
     config:
@@ -35,6 +38,8 @@ kube-prometheus-stack:
       size: 1Gi
   prometheus:
     prometheusSpec:
+      retention: 2d
+      retentionSize: 1GB
       storageSpec:
         volumeClaimTemplate:
           spec:
