`linera-rpc`: Add an RPC call to get the version from the validator

--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -46,6 +46,7 @@ test-strategy = { workspace = true, optional = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
+tonic = { workspace = true }
 tracing = { workspace = true }
 
 [dev-dependencies]
