Add Scylla and Scylla Manager dashboards to Grafana

--- a/kubernetes/linera-validator/values-local.yaml
+++ b/kubernetes/linera-validator/values-local.yaml
@@ -36,6 +36,8 @@ kube-prometheus-stack:
     persistence:
       enabled: true
       size: 1Gi
+    plugins:
+      - grafana-piechart-panel
   prometheus:
     prometheusSpec:
       retention: 2d
