Added command to subscribe and unsubscribe to other chains (#1564)
* subscribe cli

* unsubscribe cli

* lint fix and added comments

* sorted cargo.toml, updated CLI.md

* Option<ChainId> instead of ChainId

* Remove chain ID restriction in documentation

It's possible to subscribe to other chains.

* Remove redundant command specifier

It was the same as the default inferred value.

* Use milliseconds instead of microseconds

Follow the convention used in the rest of the code.

---------

Co-authored-by: Ashutosh Jha <ashutosh26jha@gmail.com>

--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -28,6 +28,7 @@ async-lock = { workspace = true }
 async-trait = { workspace = true }
 bcs = { workspace = true }
 bytes = { workspace = true, optional = true }
+clap = { workspace = true }
 custom_debug_derive = { workspace = true }
 dashmap = { workspace = true }
 derive_more = { workspace = true }
