rename request_system_balance into request_owner_balance

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -164,7 +164,7 @@ ChainInfo:
     - state_hash:
         OPTION:
           TYPENAME: CryptoHash
-    - requested_system_balance:
+    - requested_owner_balance:
         OPTION:
           TYPENAME: Amount
     - requested_committees:
@@ -194,7 +194,7 @@ ChainInfoQuery:
     - test_next_block_height:
         OPTION:
           TYPENAME: BlockHeight
-    - request_system_balance:
+    - request_owner_balance:
         OPTION:
           TYPENAME: Owner
     - request_committees: BOOL
