rename system_balance into chain_balance

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -152,7 +152,7 @@ ChainInfo:
           TYPENAME: ChainDescription
     - manager:
         TYPENAME: ChainManagerInfo
-    - system_balance:
+    - chain_balance:
         TYPENAME: Amount
     - block_hash:
         OPTION:
