--- a/.github/workflows/scylladb.yml
+++ b/.github/workflows/scylladb.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Setup local ScyllaDB instance
       run: |
         cd docker_scylla
-        docker build -t scylla_modified
+        docker build -t scylla_modified .
         docker run --name my_scylla_container -d -p 9042:9042 scylla_modified
         cd ..
     - name: Run ScyllaDB tests
