`VersionInfo`: Remove the `-dirty` flag from `git_commit` and put it into a separate `git_dirty` boolean

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -925,6 +925,7 @@ VersionInfo:
   STRUCT:
     - crate_version: STR
     - git_commit: STR
+    - git_dirty: BOOL
     - rpc_hash: STR
     - graphql_hash: STR
     - wit_hash: STR
