run certain CI actions on commits of devnet branches

--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -2,7 +2,7 @@ name: Kubernetes
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'devnet_*' ]
   pull_request:
     branches:
       - "**"
