--- a/.github/workflows/scylladb.yml
+++ b/.github/workflows/scylladb.yml
@@ -2,7 +2,7 @@ name: ScyllaDB tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'devnet_*' ]
   pull_request:
     branches:
       - "**"
