--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,6 @@ anyhow = "1.0.75"
 async-graphql = "5.0.10"
 async-graphql-axum = "5.0.10"
 async-lock = "2.8.0"
-async-stream = "0.3.5"
 async-trait = "0.1.74"
 aws-config = "1.0.1"
 aws-sdk-dynamodb = "1.3.0"
@@ -39,11 +38,12 @@ aws-sdk-s3 = "1.4.0"
 aws-smithy-http = "0.60.0"
 aws-types = "1.0.1"
 aws-smithy-types = "1.0.2"
-scylla = "0.10.1"
 axum = "0.6.20"
+base64 = "0.21.7"
 bcs = "0.1.6"
 bincode = "1.3.3"
 bytes = "1.5.0"
+cargo_metadata = "0.18.1"
 cargo_toml = "0.15.3"
 chrono = "0.4.31"
 clap = { version = "4", features = ["cargo", "derive", "env"] }
@@ -58,7 +58,6 @@ derive_more = "0.99.17"
 dirs = "5.0.1"
 ed25519 = "1.5.3"
 ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
-envy = "0.4.2"
 either = "1.9.0"
 frunk = "0.4.2"
 fs-err = { version = "2.11.0", features = ["tokio"] }
@@ -66,8 +65,8 @@ fs_extra = "1.3.0"
 futures = "0.3.29"
 generic-array = { version = "0.14.7", features = ["serde"] }
 hex = "0.4.3"
-pin-project = "1.1.3"
 http = "0.2.9"
+glob = "0.3.1"
 insta = "1.34.0"
 log = "0.4.20"
 lru = "0.9.0"
@@ -92,6 +91,7 @@ kube = "0.87.1"
 rcgen = "0.11.1"
 reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
 rocksdb = "0.21.0"
+scylla = "0.10.1"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_bytes = "0.11.12"
 serde_json = "1.0.107"
@@ -141,6 +141,7 @@ linera-indexer-plugins = { path = "./linera-indexer/plugins" }
 linera-rpc = { version = "0.8.0", path = "./linera-rpc" }
 linera-sdk = { version = "0.8.0", path = "./linera-sdk" }
 linera-storage = { version = "0.8.0", path = "./linera-storage", default-features = false }
+linera-version = { version = "0.8.0", path = "./linera-version" }
 linera-views = { version = "0.8.0", path = "./linera-views", default-features = false }
 linera-views-derive = { version = "0.8.0", path = "./linera-views-derive" }
 linera-witty = { version = "0.8.0", path = "./linera-witty" }
