--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -42,6 +42,7 @@ linera-base.workspace = true
 linera-chain.workspace = true
 linera-execution.workspace = true
 linera-storage.workspace = true
+linera-version.workspace = true
 linera-views.workspace = true
 lru.workspace = true
 prometheus.workspace = true
