--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -60,6 +60,7 @@ linera-core.workspace = true
 linera-execution.workspace = true
 linera-rpc.workspace = true
 linera-storage.workspace = true
+linera-version.workspace = true
 linera-views.workspace = true
 pathdiff = { workspace = true, optional = true }
 port-selector = { workspace = true, optional = true }
